<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.StepsFragment">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginBottom="@dimen/zero_dp"
        android:layout_marginLeft="@dimen/zero_dp"
        android:layout_marginRight="@dimen/zero_dp"
        android:layout_marginTop="@dimen/zero_dp"
        android:layout_weight="4" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/short_desc_steps_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding"
                android:text="@string/hello_blank_fragment"
                android:textSize="@dimen/cake_name_cv_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/desc_steps_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/title_padding"
                android:text="@string/hello_blank_fragment"
                android:textSize="@dimen/second_text_size" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size"
        android:layout_gravity="bottom"
        android:layout_margin="@dimen/line_margin"
        android:background="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/swipe_placeholder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_dp"
        android:layout_gravity="bottom"
        android:layout_weight="0.5"
        android:background="@color/colorAccent"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/swipe_here_to_move_to_next_previous_step" />
</LinearLayout>
