...
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/text_padding"
        android:layout_marginEnd="@dimen/text_padding"
        android:layout_marginStart="@dimen/text_padding"
        android:layout_marginTop="@dimen/text_padding"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/show_steps_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ingredient_title_tv"
        app:layout_constraintVertical_bias="0.0" />

    <Button
...
